@@ -1,0 +1,9 @@
+\score{
+	\notes\relative c'{
+		\stemup
+		[f8 a' g f]
+	}
+	\paper{
+		linewidth=-1.;
+	}
+}
